<?xml version="1.0"?>
<package>
  <name>scara_msgs</name>
  <version>0.0.0</version>
  <description>The scara_msgs package</description>
  <maintainer email="viktor@todo.todo">viktor</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pose_and_gripperState</build_depend>
  <build_depend>pose_velocity_direction</build_depend>
  <!--<build_depend>pose_and_gripperState1</build_depend>-->
  <build_depend>robot_info</build_depend>
  <build_depend>genmsgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pose_and_gripperState</run_depend>
  <run_depend>pose_velocity_direction</run_depend>
  <!--<run_depend>pose_and_gripperState1</run_depend>-->
  <run_depend>robot_info</run_depend>
  <run_depend>genmsgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
