<?xml version="1.0"?>
<package>
  <name>scara_v2_full_description</name>
  <version>0.0.0</version>
  <description>The scara_v2_full_description package</description>
  <maintainer email="viktordluhos@gmail.com">viktor</maintainer>
  <license>BSD</license>

  <author email="viktordluhos@gmail.com">viktor</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
